--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -315,11 +315,10 @@
       }
 
       .box .back .row img {
-        width: 350px;
-        height: 220px;
+        width: 420px;
+        height: 164px;
         display: inline-block;
         vertical-align: top;
-
         margin-right: 28px;
       }
       .box .back .row h1 {
@@ -329,7 +328,7 @@
         display: inline-block;
         font-family: 'Gloria Hallelujah', cursive;
         text-transform: uppercase;
-        margin: 0;
+        margin: -25px;
       }
       .box .back .row span {
         position: relative;
@@ -391,6 +390,7 @@
         }
         .box .back .row h1 {
           font-size: 36px;
+          margin: 0;
         }
         .box .back .row img {
           height: 180px;
@@ -469,11 +469,11 @@
         }
         /* This is for the backcard */
         .box .back .row img {
-          width: 240px;
-          height: 105px;
-        }
+    width: 210px;
+    height: 90px;
+}
         .box .back .row h1 {
-          font-size: 22px;
+          font-size: 27px;
         }
         .box .back .row:nth-of-type(1) {
           border-bottom: 4px solid #fe4f02;
