--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -328,7 +328,7 @@
         display: inline-block;
         font-family: 'Gloria Hallelujah', cursive;
         text-transform: uppercase;
-        margin: -25px;
+        margin: 0;
       }
       .box .back .row span {
         position: relative;
@@ -469,9 +469,9 @@
         }
         /* This is for the backcard */
         .box .back .row img {
-    width: 210px;
-    height: 90px;
-}
+          width: 210px;
+          height: 90px;
+        }
         .box .back .row h1 {
           font-size: 27px;
         }
