--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -363,6 +363,15 @@
         .box-center {
           font-size: 24px;
         }
+        u-body h1,
+        .u-body h2,
+        .u-body h3,
+        .u-body h4,
+        .u-body h5,
+        .u-body h6 {
+          padding: 0px 8px;
+        }
+        
       }
       @media (max-width: 400px) {
         .boxes {
