--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -369,9 +369,11 @@
         .u-body h4,
         .u-body h5,
         .u-body h6 {
-          padding: 0px 8px;
+          padding: 0px 3px;
         }
-        
+        .a-btn {
+          font-size: 15px;
+        }
       }
       @media (max-width: 400px) {
         .boxes {
@@ -396,7 +398,7 @@
         .a-btn-2 {
           font-size: 18px;
         }
-        ul{
+        ul {
           padding-left: 0;
         }
       }
