--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -372,7 +372,9 @@
           padding: 0px 3px;
         }
         .a-btn {
-          font-size: 15px;
+          font-size: 23px;
+          width: 27%;
+          height: 15%;
         }
       }
       @media (max-width: 400px) {
