--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -423,7 +423,7 @@
     <ul class="box-grid">
       <li class="boxes yellow">
         <h3 class="box-center">CONTRACT WITH A SCHOOL</h3>
-        <a href="" class="a-btn">&#128933; j</a>
+        <a href="" class="a-btn" style="color: yellow;">&#128933;</a>
       </li>
       <li class="boxes pink">
         <h3 class="box-center">ELEMENTARY SCHOOL TUTORING</h3>
