--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -239,7 +239,7 @@
         width: 12%;
         top: 10%;
         right: 10%;
-        background-color: #e9f2fa;
+        background-color: #2171b8;
         border-radius: 50%;
         text-align: center;
         font-size: 32px;
