--- a/Services 2.0.html
+++ b/Services 2.0.html
@@ -239,7 +239,7 @@
         width: 12%;
         top: 10%;
         right: 10%;
-        background-color: #2171b8;
+        background-color: #e9f2fa;
         border-radius: 50%;
         text-align: center;
         font-size: 32px;
@@ -423,7 +423,7 @@
     <ul class="box-grid">
       <li class="boxes yellow">
         <h3 class="box-center">CONTRACT WITH A SCHOOL</h3>
-        <a href="" class="a-btn" style="color: yellow;">&#128933;</a>
+        <a href="" class="a-btn">&#128933;</a>
       </li>
       <li class="boxes pink">
         <h3 class="box-center">ELEMENTARY SCHOOL TUTORING</h3>
