--- a/spElementary.html
+++ b/spElementary.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Our Services" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Services</title>
+    <title>Elementary</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Services.css" media="screen" />
     <link
@@ -332,7 +332,7 @@
           margin-left: 25px;
         }
         .side-hero-logo {
-         display: none;
+          display: none;
         }
         .icon-1st {
           width: 60px;
@@ -345,7 +345,6 @@
           align-self: end;
           margin-left: 35px;
         }
-
       }
 
       @media (max-width: 480px) {
@@ -374,14 +373,14 @@
         style="object-fit: fill"
       />
       <p class="hero-paragraph">
-        Are you seeking extra assistance for your elementary
-        school child (grades K-5) in the classroom? Look no further! Shining
-        Bright Tutors is a company that focuses on providing support to
-        elementary-aged students in various subjects, such as Phonics, Reading,
-        Writing, Spelling, Grammar, Math, Social Studies, and Science through
-        virtual sessions. We offer a range of customized packages to meet your
-        needs. If you can't find a package that fits your specific requirements
-        or want one tailored to your child's needs, feel free to contact us!
+        Are you seeking extra assistance for your elementary school child
+        (grades K-5) in the classroom? Look no further! Shining Bright Tutors is
+        a company that focuses on providing support to elementary-aged students
+        in various subjects, such as Phonics, Reading, Writing, Spelling,
+        Grammar, Math, Social Studies, and Science through virtual sessions. We
+        offer a range of customized packages to meet your needs. If you can't
+        find a package that fits your specific requirements or want one tailored
+        to your child's needs, feel free to contact us!
       </p>
     </div>
     <ul class="package">
@@ -399,8 +398,9 @@
           Package
         </h4>
         <p>
-          Don't know how many hours you need or want to pay for one hour at a
-          time? Choose this hourly rate. $45/hr.
+          If you prefer a short-term commitment for quick tutoring, you can
+          choose our 5-hour package to get started. This package is priced at
+          $43 per hour.
         </p>
         <a href="" class="package-button">Select</a>
       </li>
@@ -410,8 +410,10 @@
           Package
         </h4>
         <p>
-          Don't know how many hours you need or want to pay for one hour at a
-          time? Choose this hourly rate. $45/hr.
+          If you want to provide your student with more time to enhance their
+          skills, you can opt for our 10-hour package, which can be customized
+          to meet your specific requirements. This package is priced at $41 per
+          hour.
         </p>
         <a href="" class="package-button">Select</a>
       </li>
@@ -421,8 +423,9 @@
           Package
         </h4>
         <p>
-          Don't know how many hours you need or want to pay for one hour at a
-          time? Choose this hourly rate. $45/hr.
+          If you are ready for a long-term commitment to your student's academic
+          progress, you can choose our 15-hour package, which can be tailored to
+          meet your specific needs. This package is priced at $38 per hour.
         </p>
         <a href="" class="package-button">Select</a>
       </li>
@@ -432,8 +435,10 @@
           Package
         </h4>
         <p>
-          Don't know how many hours you need or want to pay for one hour at a
-          time? Choose this hourly rate. $45/hr.
+          If you have multiple areas of need or require a substantial number of
+          tutoring hours, you can opt for our 20-hour package, which is designed
+          to meet your specific requirements. This package is priced at $35 per
+          hour.
         </p>
         <a href="" class="package-button">Select</a>
       </li>
