--- a/spMiddleSchool.html
+++ b/spMiddleSchool.html
@@ -6,9 +6,13 @@
     <meta name="keywords" content="Our Services" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Services</title>
+    <title>Middle School</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Services.css" media="screen" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script"
+    />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -186,278 +190,264 @@
         </nav>
       </div>
     </header>
+
     <style>
-      .boxes {
-        position: relative;
-        width: 400px;
-        height: 400px;
-        list-style: none;
-        border-radius: 4px;
-        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
-      }
-      .box-grid {
+      .hero {
         display: flex;
-        width: 100%;
         flex-wrap: wrap;
-        justify-content: center;
-        gap: 25px;
+        justify-content: space-evenly;
+        position: relative;
       }
-      .pink {
-        background-color: #ec5db5;
-        color: white;
-        text-align: center;
-      }
-
-      .yellow {
-        background-color: #f6c21e;
-        color: #ec5db5;
-        text-align: center;
-      }
-
-      .purple {
-        background-color: #8e64c9;
-        color: white;
-        text-align: center;
-      }
-
-      .box-center {
-        width: 100%;
+      .side-hero-logo {
+        width: 10%;
+        height: 70%;
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        font-weight: 800;
-        font-size: 40px;
-        margin: 0;
+        top: 0;
+        left: 8%;
+      }
+      .icon-1st {
+        width: 170px;
+      }
+      .hero-header {
+        font-family: 'Petit Formal Script';
+        font-size: 50px;
+        color: #8e64c9;
+        align-self: end;
+        margin-left: 350px;
       }
 
-      .box-span {
-        font-size: 15px;
+      .hero-paragraph {
+        color: #8e64c9;
+        flex-basis: 69%;
+        align-self: end;
+        margin-left: 150px;
       }
 
-      .a-btn {
-        position: absolute;
-        width: 12%;
-        top: 10%;
-        right: 10%;
-        background-color: #e9f2fa;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 32px;
-        font-weight: 600;
+      .package {
+        display: flex;
+        margin: 100px;
+        justify-content: space-between;
+        gap: 15px;
       }
-
-      .a-btn-2 {
-        position: absolute;
-        width: 18%;
-        bottom: 10%;
-        left: 10%;
-        border: 2px solid white;
-        color: white;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 40px;
-        font-weight: 600;
-      }
-      .yellow .a-btn {
-        color: #f6c21e;
-        z-index: 2;
-      }
-
-      .pink .a-btn {
-        color: #ec5db5;
-      }
-      .purple .a-btn {
+      .package-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-width: 180px;
+        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+        border: 2px solid #ec5db55e;
+        border-radius: 10px;
+        list-style: none;
+        padding: 10px;
         color: #8e64c9;
       }
-      .u-body h1,
-      .u-body h2,
-      .u-body h3,
-      .u-body h4,
-      .u-body h5,
-      .u-body h6 {
-        padding: 0 73px;
+      .package-header {
+        font-family: 'Petit Formal Script';
+        transform: rotate(345deg);
       }
-      .hero {
+      .package-header-font {
+        font-size: 45px;
+      }
+      .package-button {
+        border: 2px solid #8e64c9;
         color: #ec5db5;
+        border-radius: 20px;
+        width: 120px;
+        padding: 4px;
+        text-align: center;
+        text-decoration: underline;
       }
-      .hero-wraper {
-        display: flex;
-        align-items: center;
-        margin-left: 50px;
+      ul:not(.u-unstyled) {
+        margin-top: 20px;
+        margin-bottom: 22px;
       }
-      @media (max-width: 1600px) {
-        .boxes {
-          width: 20%;
+      .bottom-note {
+        color: #8e64c9;
+        text-align: center;
+      }
+
+      @media (max-width: 1240px) {
+        .side-hero-logo {
+          width: 15%;
+          height: 45%;
+          left: 5%;
         }
-        .box-center {
-          font-size: 32px;
+        h1:not(.u-title) {
+          font-size: 40px;
+        }
+        .hero-header {
+          margin-left: 220px;
         }
 
-        .u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0 56px;
+        .package-list {
+          min-width: 156px;
+          justify-content: flex-end;
+        }
+        .package-header-font {
+          font-size: 35px;
+        }
+        p {
+          font-size: 12px;
         }
       }
-      @media (max-width: 1400px) {
-        .boxes {
+
+      @media (max-width: 1024px) {
+        .side-hero-logo {
           width: 22%;
-          height: 300px;
+          height: 36%;
+          left: 5%;
+        }
+        h1:not(.u-title) {
+          font-size: 25px;
+        }
+        .icon-1st {
+          width: 80px;
+        }
+        .side-hero-logo {
+          width: 16%;
+          height: 40%;
+          left: 9%;
+          top: 12%;
+        }
+        .package {
+          display: flex;
+          margin: 0px;
+          justify-content: center;
+          gap: 15px;
+          flex-wrap: wrap;
+        }
+        h4 {
+          font-size: 1rem;
+        }
+        .package-header-font {
+          font-size: 25px;
+        }
+        .package-list {
+          max-width: 225px;
         }
       }
 
-      @media (max-width: 1200px) {
-        .box-center {
-          font-size: 24px;
+      @media (max-width: 768px) {
+        .hero-header {
+          margin-left: 25px;
         }
-        .u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0 53px;
+        .side-hero-logo {
+          display: none;
         }
-
-        .a-btn {
-          font-size: 21px;
+        .icon-1st {
+          width: 60px;
+          height: 50px;
+          margin-right: 10px;
         }
-        .a-btn-2 {
-          font-size: 28px;
-        }
-      }
-      @media (max-width: 1000px) {
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 29px;
-        }
-        .box-center {
-          font-size: 24px;
-        }
-        .boxes {
-          height: 225px;
+        .hero-paragraph {
+          color: #8e64c9;
+          flex-basis: 68%;
+          align-self: end;
+          margin-left: 35px;
         }
       }
-      @media (max-width: 700px) {
-        .boxes {
-          height: 300px;
-          width: 42%;
-        }
 
-        .box-center {
-          font-size: 36px;
+      @media (max-width: 480px) {
+        .hero-header {
+          margin-left: 0px;
         }
-      }
-      @media (max-width: 550px) {
-        .boxes {
-          height: 250px;
-          width: 40%;
-        }
-
-        .box-center {
-          font-size: 24px;
-        }
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 3px;
-        }
-        .a-btn {
-          font-size: 23px;
-          width: 27%;
-          height: 15%;
-        }
-      }
-      @media (max-width: 400px) {
-        .boxes {
-          height: 175px;
-          width: 40%;
-        }
-
-        .box-center {
-          font-size: 16px;
-        }
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 23px;
-        }
-        .a-btn {
-          font-size: 10px;
-        }
-        .a-btn-2 {
-          font-size: 18px;
-        }
-        ul {
-          padding-left: 0;
+        .icon-1st {
+          width: 120px;
+          height: 70px;
         }
       }
     </style>
-    <div class="hero-wraper">
+    <div class="hero">
       <img
-        src="images/favicon.png"
+        src="images/side logo for services.jpg"
         alt=""
-        style="
-          width: 58px;
-          height: 56px;
-          border-radius: 50%;
-          background-color: #f6c21e;
-          padding: 3px;
-        "
+        class="side-hero-logo"
       />
-      <h1 class="hero" style="padding-left: 10px">Our Services</h1>
+      <h1 class="hero-header">Middle School Tutoring</h1>
+      <img
+        class="icon-1st"
+        crossorigin="anonymous"
+        src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png"
+        draggable="false"
+        alt="Hand Drawn Girl Saying Hello to Her Online Class"
+        style="object-fit: fill"
+      />
+      <p class="hero-paragraph">
+        As children enter Middle School, they encounter more difficult subjects
+        that can be challenging to handle. This is where we come in to support
+        you. Shining Bright Tutors is dedicated to providing assistance to
+        middle school-aged students in various areas, such as Reading, Writing,
+        Math, Social Studies, and Science through virtual sessions. We offer a
+        range of packages tailored to meet your specific needs. In case you
+        don't find a package that suits your requirements or need a personalized
+        one for your child, feel free to contact us!
+      </p>
     </div>
-    <ul class="box-grid">
-      <li class="boxes yellow">
-        <h3 class="box-center">CONTRACT WITH A SCHOOL</h3>
-        <a href="" class="a-btn">&#128933;</a>
+    <ul class="package">
+      <li class="package-list">
+        <h4 class="package-header package-header-font">Hourly</h4>
+        <p>
+          If you are unsure about the number of hours you need or prefer to pay
+          for one session at a time, you may opt for our hourly rate of $48 per
+          hour.
+        </p>
+        <a href="" class="package-button">Select</a>
       </li>
-      <li class="boxes pink">
-        <h3 class="box-center">ELEMENTARY SCHOOL TUTORING</h3>
-        <a href="spElementary.html" class="a-btn">&#128933;</a>
+      <li class="package-list">
+        <h4 class="package-header">
+          5 Hour <br />
+          Package
+        </h4>
+        <p>
+          If you prefer a short-term commitment for quick tutoring, you can
+          choose our 5-hour package to get started. This package is priced at
+          $46 per hour.
+        </p>
+        <a href="" class="package-button">Select</a>
       </li>
-      <li class="boxes purple">
-        <h3 class="box-center">MIDDLE SCHOOL TUTORING</h3>
-        <a href="spMiddleSchool.html" class="a-btn">&#128933;</a>
+      <li class="package-list">
+        <h4 class="package-header">
+          10 Hour <br />
+          Package
+        </h4>
+        <p>
+          If you want to provide your student with more time to enhance their
+          skills, you can opt for our 10-hour package, which can be customized
+          to meet your specific requirements. This package is priced at $44 per
+          hour.
+        </p>
+        <a href="" class="package-button">Select</a>
       </li>
-      <li class="boxes pink">
-        <h3 class="box-center">HIGH SCHOOL TUTORING</h3>
-        <a href="spHighschool.html" class="a-btn">&#128933;</a>
+      <li class="package-list">
+        <h4 class="package-header">
+          15 Hour <br />
+          Package
+        </h4>
+        <p>
+          If you are ready for a long-term commitment to your student's academic
+          progress, you can choose our 15-hour package, which can be tailored to
+          meet your specific needs. This package is priced at $41 per hour.
+        </p>
+        <a href="" class="package-button">Select</a>
       </li>
-      <li class="boxes purple">
-        <h3 class="box-center">SIGN UP NOW</h3>
-        <a href="" class="a-btn-2">&#129122;</a>
-      </li>
-      <li class="boxes yellow">
-        <h3 class="box-center">STATE & DISTRICT TEST PREP</h3>
-        <a href="spStateTestPrep.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes pink">
-        <h3 class="box-center">ACT/SAT TEST PREP</h3>
-        <a href="spActSatTestPrep.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes yellow">
-        <h3 class="box-center">
-          EDUCATIONAL DIAGNOSTIC TESTING <br /><span class="box-span"
-            >**COMING SOON...</span
-          >
-        </h3>
+      <li class="package-list">
+        <h4 class="package-header">
+          20 Hour <br />
+          Package
+        </h4>
+        <p>
+          If you have multiple areas of need or require a substantial number of
+          tutoring hours, you can opt for our 20-hour package, which is designed
+          to meet your specific requirements. This package is priced at $38 per
+          hour.
+        </p>
+        <a href="" class="package-button">Select</a>
       </li>
     </ul>
-
+    <p class="bottom-note">
+      ***Please note: When you click pay now, payment is taken through stripe
+      and the convenience fee is included in the final price.***
+    </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-1144"
