--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -257,7 +257,7 @@
       .box:hover .front {
         transform: perspective(1000px) rotateY(180deg);
       }
-     
+
       .box .back {
         position: absolute;
         top: 10%;
@@ -272,10 +272,9 @@
         border-radius: 10px;
         overflow-y: scroll;
         background-color: #9063cd;
-        
       }
- 
-/* .box .back::-webkit-scrollbar {
+
+      /* .box .back::-webkit-scrollbar {
   width: 10px;
   height: 80%;
 
@@ -609,6 +608,28 @@
         }
         .box .back .row:nth-of-type(2) {
           padding: 10px 10px;
+        }
+        .box .back::-webkit-scrollbar {
+          width: 10px;
+          height: 80%;
+        }
+        .box .back {
+          scrollbar-width: thin;
+          scrollbar-color: red #9063cd;
+        }
+        .box .back::-webkit-scrollbar-track {
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          -webkit-border-radius: 10px;
+          border-radius: 10px;
+        }
+        .box .back::-webkit-scrollbar-thumb {
+          -webkit-border-radius: 10px;
+          border-radius: 10px;
+          background: rgba(255, 0, 0, 0.8);
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        }
+        ::-webkit-scrollbar-thumb:window-inactive {
+          background: rgba(255, 0, 0, 0.4);
         }
       }
     </style>
