--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -560,7 +560,7 @@
           padding: 4px 4px;
         }
       }
-      @media (max-width: 495px) {
+      @media (max-width: 550px) {
         .top-image {
           height: 30vh;
           filter: brightness(130%);
@@ -760,7 +760,7 @@
                   Am I able to <br />
                   check my <br />
                   child's <br />
-                  progress?
+                  progress? z
                 </h1>
               </div>
             </div>
