--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -560,7 +560,7 @@
           padding: 4px 4px;
         }
       }
-      @media (max-width: 550px) {
+      @media (max-width: 480px) {
         .top-image {
           height: 30vh;
           filter: brightness(130%);
@@ -609,11 +609,11 @@
         .box .back .row:nth-of-type(2) {
           padding: 10px 10px;
         }
-        .box .back::-webkit-scrollbar {
+        /* .box .back::-webkit-scrollbar {
           width: 10px;
           height: 80%;
-        }
-        .box .back {
+        } */
+        /* .box .back {
           scrollbar-width: thin;
           scrollbar-color: red #9063cd;
         }
@@ -630,7 +630,7 @@
         }
         ::-webkit-scrollbar-thumb:window-inactive {
           background: rgba(255, 0, 0, 0.4);
-        }
+        } */
       }
     </style>
     <div class="hero-wraper">
@@ -760,7 +760,7 @@
                   Am I able to <br />
                   check my <br />
                   child's <br />
-                  progress? z
+                  progress?
                 </h1>
               </div>
             </div>
