--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -609,6 +609,10 @@
         .box .back .row:nth-of-type(2) {
           padding: 10px 10px;
         }
+        .box .back{
+          overflow: scroll;
+          -webkit-overflow-scrolling: touch;
+        }
         /* .box .back::-webkit-scrollbar {
           width: 10px;
           height: 80%;
